--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -9,8 +9,8 @@
     "import random\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import nglview"
-    "https://userguide.mdanalysis.org/stable/examples/constructing_universe.html"
+    "import nglview\n"
+    "# https://userguide.mdanalysis.org/stable/examples/constructing_universe.html"
    ]
   },
   {
