--- a/MD_0.ipynb
+++ b/MD_0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,8 @@
     "Lx, Ly, Lz = 10, 10, 10\n",
     "epsilon = 1\n",
     "sigma = 1\n",
+    "delta_mc = 0.5\n",
+    "maximum_steps = 500\n",
     "\n",
     "box_size = np.zeros(3)\n",
     "box_size = np.array([Lx, Ly, Lz])\n",
@@ -106,11 +108,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (4108701231.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    for time in range(maximum_steps):\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "for time in range(maximum_steps):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "delta_mc = 0.5"
+    "potential_energy = calculate_potential_energy(atoms_positions, number_atoms, box_size, number_dimensions, sigma, epsilon)\n",
+    "trial_atoms_positions = copy.deepcopy(atoms_positions)\n",
+    "atom_id = np.random.randint(number_atoms)\n",
+    "trial_atoms_positions[atom_id] += (np.random.random(3)-0.5)*delta_mc\n",
+    "trial_potential_energy = calculate_potential_energy(trial_atoms_positions, number_atoms, box_size, number_dimensions, sigma, epsilon)\n",
+    "acceptation_probability = np.min([1, np.exp(trial_potential_energy-potential_energy)])\n",
+    "if np.random.random() <= acceptation_probability:\n",
+    "    atoms_positions = trial_atoms_positions"
    ]
   },
   {
@@ -122,14 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
