started clean code

--- a/MD_0.ipynb
+++ b/MD_0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +109,92 @@
     "velocity_com = calculate_velocity_com(atoms_velocities, number_atoms)\n",
     "kinetic_energy = calculate_kinetic_energy(atoms_velocities, number_atoms, number_dimensions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.45270654, 0.32242932, 0.43205812, 0.89713187, 0.74548005,\n",
+       "       0.81010069, 0.76381547, 0.66972732, 0.30277265, 0.48629476])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.random(number_atoms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 0.0],\n",
+       " [0.0, 0.0, 0.0]]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoms_positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-5.,  5.],\n",
+       "       [ 0.,  0.],\n",
+       "       [ 0.,  0.]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box_boundaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
