--- a/run.ipynb
+++ b/run.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17192.77815464178\n"
+     ]
+    }
+   ],
    "source": [
     "from main import MolecularSimulation\n",
     "\n",
@@ -13,7 +21,8 @@
     "                    maximum_steps=500,\n",
     "                    dimensions=3,\n",
     "                    monte_carlo=True,\n",
-    "                    molecular_dynamics=True,\n",
+    "                    molecular_dynamics=False,\n",
+    "                    seed=4188,\n",
     "                    ).print_log()"
    ]
   },
