added gitignore and dump

--- a/run.ipynb
+++ b/run.ipynb
@@ -4,48 +4,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17192.77815464178\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from main import MolecularSimulation\n",
     "\n",
     "MolecularSimulation(number_atoms=10,\n",
     "                    Lx=10,\n",
-    "                    maximum_steps=500,\n",
+    "                    maximum_steps=1001,\n",
     "                    dimensions=3,\n",
     "                    monte_carlo=True,\n",
     "                    molecular_dynamics=False,\n",
     "                    seed=4188,\n",
-    "                    ).print_log()"
+    "                    thermo=100,\n",
+    "                    dump=100,\n",
+    "                    ).run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
