improved log file

--- a/run.ipynb
+++ b/run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,15 @@
     "\n",
     "MolecularSimulation(number_atoms=10,\n",
     "                    Lx=10,\n",
-    "                    maximum_steps=1001,\n",
+    "                    maximum_steps=10001,\n",
     "                    dimensions=3,\n",
-    "                    monte_carlo=True,\n",
+    "                    monte_carlo_move=True,\n",
+    "                    monte_carlo_insert=True,\n",
     "                    molecular_dynamics=False,\n",
-    "                    seed=4188,\n",
-    "                    thermo=100,\n",
-    "                    dump=100,\n",
+    "                    seed=41812,\n",
+    "                    thermo=1000,\n",
+    "                    dump=1000,\n",
+    "                    mu=-0.2,\n",
     "                    ).run()"
    ]
   }
