--- a/MD_0.ipynb
+++ b/MD_0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,16 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3980"
+       "3101"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,33 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.03142349, 0.46250976, 0.46701782, 0.16870315, 0.26452275,\n",
-       "       0.06790844, 0.26734446, 0.35419143, 0.17783451, 0.28078361])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,19 +526,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 1.31 PiB for an array with shape (34, 35, 78, 61, 56, 71, 90, 91) and data type int64",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[39], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m numbers \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([\u001b[39m34\u001b[39m, \u001b[39m35\u001b[39m, \u001b[39m78\u001b[39m, \u001b[39m61\u001b[39m, \u001b[39m56\u001b[39m, \u001b[39m71\u001b[39m, \u001b[39m90\u001b[39m, \u001b[39m91\u001b[39m])\n\u001b[0;32m----> 3\u001b[0m indicesToRemove \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mrandom\u001b[39m.\u001b[39;49mchoice(\n\u001b[1;32m      4\u001b[0m                             numbers\u001b[39m.\u001b[39;49msize,\n\u001b[1;32m      5\u001b[0m                             numbers)\n",
+      "File \u001b[0;32mmtrand.pyx:981\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mmtrand.pyx:765\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.randint\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m_bounded_integers.pyx:1256\u001b[0m, in \u001b[0;36mnumpy.random._bounded_integers._rand_int64\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mMemoryError\u001b[0m: Unable to allocate 1.31 PiB for an array with shape (34, 35, 78, 61, 56, 71, 90, 91) and data type int64"
+     ]
+    }
+   ],
    "source": [
-    "str(x[i])"
+    "numbers = np.array([34, 35, 78, 61, 56, 71, 90, 91])\n",
+    "\n",
+    "indicesToRemove = np.random.choice(\n",
+    "                            numbers.size,\n",
+    "                            numbers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.45824606, -1.45587859,  0.36856223],\n",
+       "       [ 0.41945071,  4.04006065,  2.13478709],\n",
+       "       [-4.05713766,  0.91635737, -4.54813359],\n",
+       "       [ 0.3472327 ,  4.73967053,  1.01942186],\n",
+       "       [-3.32919799,  4.82022147,  1.61591507],\n",
+       "       [-2.13505059, -1.78360311, -1.9387136 ],\n",
+       "       [-0.6139425 ,  1.67025231, -0.94446609],\n",
+       "       [ 2.56973056, -2.48407471,  1.99582651],\n",
+       "       [-3.01048758,  0.36188812,  0.55060413]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([34, 35, 78, 56, 71, 90, 91])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.delete(numbers, 3)"
+   ]
   },
   {
    "cell_type": "code",
