--- a/run.ipynb
+++ b/run.ipynb
@@ -1,24 +1,37 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 1.]\n",
+      " [0. 0. 5.]]\n"
+     ]
+    }
+   ],
    "source": [
     "from main import MolecularSimulation\n",
     "\n",
-    "MolecularSimulation(number_atoms=10,\n",
-    "                    Lx=10,\n",
-    "                    maximum_steps=10001,\n",
+    "MolecularSimulation(number_atoms=2,\n",
+    "                    Lx=20,\n",
+    "                    maximum_steps=5600,\n",
     "                    dimensions=3,\n",
-    "                    monte_carlo_move=True,\n",
-    "                    monte_carlo_insert=True,\n",
-    "                    molecular_dynamics=False,\n",
+    "                    monte_carlo_move=False,\n",
+    "                    monte_carlo_insert=False,\n",
+    "                    molecular_dynamics=True,\n",
     "                    seed=41812,\n",
-    "                    thermo=1000,\n",
-    "                    dump=1000,\n",
-    "                    mu=-0.2,\n",
+    "                    thermo=1,\n",
+    "                    dump=1,\n",
     "                    ).run()"
    ]
   }
