--- a/run.ipynb
+++ b/run.ipynb
@@ -9,11 +9,31 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.48185800720908745\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 13\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmain\u001b[39;00m \u001b[39mimport\u001b[39;00m MolecularSimulation\n\u001b[1;32m      3\u001b[0m MolecularSimulation(number_atoms\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m,\n\u001b[1;32m      4\u001b[0m                     Lx\u001b[39m=\u001b[39;49m\u001b[39m20\u001b[39;49m,\n\u001b[1;32m      5\u001b[0m                     maximum_steps\u001b[39m=\u001b[39;49m\u001b[39m56000\u001b[39;49m,\n\u001b[1;32m      6\u001b[0m                     dimensions\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m,\n\u001b[1;32m      7\u001b[0m                     monte_carlo_move\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[1;32m      8\u001b[0m                     monte_carlo_insert\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[1;32m      9\u001b[0m                     molecular_dynamics\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[1;32m     10\u001b[0m                     seed\u001b[39m=\u001b[39;49m\u001b[39m41812\u001b[39;49m,\n\u001b[1;32m     11\u001b[0m                     thermo\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m,\n\u001b[1;32m     12\u001b[0m                     dump\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m,\n\u001b[0;32m---> 13\u001b[0m                     )\u001b[39m.\u001b[39;49mrun()\n",
+      "File \u001b[0;32m~/Git/Personal/mdcourse.github.io/main.py:72\u001b[0m, in \u001b[0;36mMolecularSimulation.run\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     70\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmonte_carlo_insert_delete()\n\u001b[1;32m     71\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmolecular_dynamics:\n\u001b[0;32m---> 72\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmolecular_dynamics_displacement()\n\u001b[1;32m     73\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwrap_in_box()\n\u001b[1;32m     74\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mupdate_log()\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "from main import MolecularSimulation\n",
     "\n",
-    "MolecularSimulation(number_atoms=20,\n",
+    "MolecularSimulation(number_atoms=2,\n",
     "                    Lx=20,\n",
     "                    maximum_steps=56000,\n",
     "                    dimensions=3,\n",
