--- a/molecular-simulation/run.ipynb
+++ b/molecular-simulation/run.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from main import MolecularSimulation\n",
     "\n",
-    "MolecularSimulation(number_atoms=5,\n",
-    "                    Lx=20,\n",
-    "                    maximum_steps=50000,\n",
+    "MolecularSimulation(number_atoms=300,\n",
+    "                    Lx=14,\n",
+    "                    maximum_steps=5000,\n",
     "                    dimensions= 3,\n",
-    "                    monte_carlo_move=False,\n",
-    "                    monte_carlo_insert=True,\n",
+    "                    monte_carlo_move=True,\n",
+    "                    monte_carlo_insert=False,\n",
     "                    molecular_dynamics=False,\n",
     "                    seed=4182,\n",
     "                    thermo=100,\n",
