added new annex

--- a/molecular-simulation/run.ipynb
+++ b/molecular-simulation/run.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from main import MolecularSimulation\n",
     "\n",
-    "MolecularSimulation(number_atoms=300,\n",
+    "MolecularSimulation(number_atoms=30,\n",
     "                    Lx=14,\n",
-    "                    maximum_steps=5000,\n",
+    "                    maximum_steps=500,\n",
     "                    dimensions= 3,\n",
-    "                    monte_carlo_move=True,\n",
+    "                    monte_carlo_move=False,\n",
     "                    monte_carlo_insert=False,\n",
-    "                    molecular_dynamics=False,\n",
+    "                    molecular_dynamics=True,\n",
     "                    seed=4182,\n",
     "                    thermo=100,\n",
     "                    dump=100,\n",
