--- a/debug/python/run.ipynb
+++ b/debug/python/run.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "MolecularSimulation(number_atoms=2,\n",
     "                    Lx=12,\n",
-    "                    maximum_steps=11800, #20000,\n",
+    "                    maximum_steps=20000,\n",
     "                    dimensions= 3,\n",
     "                    monte_carlo_move=False,\n",
     "                    monte_carlo_insert=False,\n",
