--- a/benchmark/python_25part_1.7nm3_300K_NVT/python_25part_1.7nm3_300K_NVT/run.ipynb
+++ b/benchmark/python_25part_1.7nm3_300K_NVT/python_25part_1.7nm3_300K_NVT/run.ipynb
@@ -2,34 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"../../molecular-simulation/\")\n",
     "from main import MolecularSimulation\n",
     "\n",
-    "MolecularSimulation(number_atoms=50,\n",
-    "                    Lx=20,\n",
-    "                    maximum_steps=1000,\n",
+    "MolecularSimulation(number_atoms=25,\n",
+    "                    Lx=12,\n",
+    "                    maximum_steps=2000000,\n",
     "                    dimensions= 3,\n",
     "                    monte_carlo_move=False,\n",
-    "                    monte_carlo_insert=True,\n",
-    "                    molecular_dynamics=False,\n",
+    "                    monte_carlo_insert=False,\n",
+    "                    molecular_dynamics=True,\n",
     "                    desired_temperature=300,\n",
-    "                    seed=42982,\n",
-    "                    thermo=100,\n",
-    "                    dump=100,\n",
-    "                    debug=False,\n",
-    "                    mu = -2,\n",
+    "                    seed=41982,\n",
+    "                    thermo=500,\n",
+    "                    dump=500,\n",
     "                    ).run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
