--- a/molecular-simulation/run.ipynb
+++ b/molecular-simulation/run.ipynb
@@ -8,19 +8,16 @@
    "source": [
     "from main import MolecularSimulation\n",
     "\n",
-    "MolecularSimulation(number_atoms=50,\n",
+    "MolecularSimulation(number_atoms=20,\n",
     "                    Lx=20,\n",
-    "                    maximum_steps=1000,\n",
+    "                    maximum_steps=10000,\n",
     "                    dimensions= 3,\n",
-    "                    monte_carlo_move=False,\n",
-    "                    monte_carlo_insert=True,\n",
-    "                    molecular_dynamics=False,\n",
+    "                    monte_carlo=False,\n",
+    "                    molecular_dynamics=True,\n",
     "                    desired_temperature=300,\n",
     "                    seed=42982,\n",
     "                    thermo=100,\n",
     "                    dump=100,\n",
-    "                    debug=False,\n",
-    "                    mu = -2,\n",
     "                    ).run()"
    ]
   },
