--- a/molecular-simulation/test.ipynb
+++ b/molecular-simulation/test.ipynb
@@ -2,31 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from main import MolecularSimulation\n",
-    "\n",
-    "MolecularSimulation(number_atoms=20,\n",
-    "                    Lx=20,\n",
-    "                    maximum_steps=10000,\n",
-    "                    dimensions= 3,\n",
-    "                    monte_carlo=False,\n",
-    "                    molecular_dynamics=True,\n",
-    "                    desired_temperature=300,\n",
-    "                    seed=42982,\n",
-    "                    thermo=100,\n",
-    "                    dump=100,\n",
-    "                    ).run()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Person:\n",
+    "  def __init__(self, fname, lname):\n",
+    "    self.firstname = fname\n",
+    "    self.lastname = lname\n",
+    "\n",
+    "  def printname(self):\n",
+    "    print(self.firstname, self.lastname)\n",
+    "\n",
+    "#Use the Person class to create an object, and then execute the printname method:\n",
+    "\n",
+    "x = Person(\"John\", \"Doe\")\n",
+    "x.printname() \n",
+    "\n",
+    "class Student(Person):\n",
+    "  def __init__(self, fname, lname, year):\n",
+    "    super().__init__(fname, lname)\n",
+    "    self.graduationyear = year\n",
+    "\n",
+    "  def welcome(self):\n",
+    "    print(\"Welcome\", self.firstname, self.lastname, \"to the class of\", self.graduationyear) \n",
+    "\n",
+    "x = Student(\"Mike\", \"Olsen\", 2019)\n",
+    "x.printname() \n",
+    "x.welcome() "
+   ]
   }
  ],
  "metadata": {
