--- a/molecular-simulation/run.ipynb
+++ b/molecular-simulation/run.ipynb
@@ -4,10 +4,77 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "InitializeSimulation.__init__() got an unexpected keyword argument 'maximum_steps'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmain\u001b[39;00m \u001b[39mimport\u001b[39;00m MolecularDynamics\n\u001b[0;32m----> 3\u001b[0m x \u001b[39m=\u001b[39m MolecularDynamics(number_atoms\u001b[39m=\u001b[39;49m\u001b[39m20\u001b[39;49m,\n\u001b[1;32m      4\u001b[0m                       Lx\u001b[39m=\u001b[39;49m\u001b[39m20\u001b[39;49m,\n\u001b[1;32m      5\u001b[0m                       maximum_steps\u001b[39m=\u001b[39;49m\u001b[39m1000\u001b[39;49m,\n\u001b[1;32m      6\u001b[0m                       )\n\u001b[1;32m      7\u001b[0m x\u001b[39m.\u001b[39mrun()\n",
+      "\u001b[0;31mTypeError\u001b[0m: InitializeSimulation.__init__() got an unexpected keyword argument 'maximum_steps'"
+     ]
+    }
+   ],
    "source": [
-    "from main import MolecularSimulation\n",
+    "from main import MolecularDynamics\n",
     "\n",
+    "x = MolecularDynamics(number_atoms=20,\n",
+    "                      Lx=20,\n",
+    "                      maximum_steps=1000,\n",
+    "                      )\n",
+    "\n",
+    "# fix using https://stackoverflow.com/questions/34324247/unexpected-keyword-argument-in-super-init \n",
+    "x.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'MolecularSimulation' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m MolecularSimulation(number_atoms\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m,\n\u001b[1;32m      2\u001b[0m                     Lx\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m,\n\u001b[1;32m      3\u001b[0m                     maximum_steps\u001b[39m=\u001b[39m\u001b[39m10000\u001b[39m,\n\u001b[1;32m      4\u001b[0m                     dimensions\u001b[39m=\u001b[39m \u001b[39m3\u001b[39m,\n\u001b[1;32m      5\u001b[0m                     monte_carlo\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[1;32m      6\u001b[0m                     molecular_dynamics\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m      7\u001b[0m                     desired_temperature\u001b[39m=\u001b[39m\u001b[39m300\u001b[39m,\n\u001b[1;32m      8\u001b[0m                     seed\u001b[39m=\u001b[39m\u001b[39m42982\u001b[39m,\n\u001b[1;32m      9\u001b[0m                     thermo\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m,\n\u001b[1;32m     10\u001b[0m                     dump\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m,\n\u001b[1;32m     11\u001b[0m                     )\u001b[39m.\u001b[39mrun()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'MolecularSimulation' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "MolecularSimulation(number_atoms=20,\n",
     "                    Lx=20,\n",
     "                    maximum_steps=10000,\n",
