--- a/molecular-simulation/test.ipynb
+++ b/molecular-simulation/test.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Doe\n",
+      "Mike Olsen\n",
+      "Welcome Mike Olsen to the class of 2019\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "  def __init__(self, fname, lname):\n",
