fixed class ineritance

--- a/molecular-simulation/test.ipynb
+++ b/molecular-simulation/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +40,67 @@
     "x = Student(\"Mike\", \"Olsen\", 2019)\n",
     "x.printname() \n",
     "x.welcome() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "CageDoor.__init__() got an unexpected keyword argument 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 20\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(lockstatus\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[1;32m     15\u001b[0m                          openstatus\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[1;32m     16\u001b[0m                          name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCage Door\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     17\u001b[0m                          description\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIt\u001b[39m\u001b[39m'\u001b[39m\u001b[39ms the door to the cage.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     18\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdescription)\n\u001b[0;32m---> 20\u001b[0m CageDoor \u001b[39m=\u001b[39m CageDoor(name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mpoop\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: CageDoor.__init__() got an unexpected keyword argument 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "class Scenery():\n",
+    "    def __init__(self,name,description):\n",
+    "        self.name=name\n",
+    "        self.description=description\n",
+    "\n",
+    "class Door(Scenery):\n",
+    "    def __init__(self,openstatus,lockstatus, *args, **kwargs):\n",
+    "        self.openstatus=openstatus\n",
+    "        self.lockstatus=lockstatus\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "\n",
+    "class CageDoor(Door):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(lockstatus=False,\n",
+    "                         openstatus=False,\n",
+    "                         name=\"Cage Door\",\n",
+    "                         description=\"It's the door to the cage.\")\n",
+    "        print(self.description)\n",
+    "        \n",
+    "CageDoor = CageDoor(name=\"poop\")"
    ]
   }
  ],
