--- a/molecular-simulation/run.ipynb
+++ b/molecular-simulation/run.ipynb
@@ -4,14 +4,32 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step temp press\n",
+      "1 146.77 22.496\n",
+      "2 146.77 22.496\n",
+      "3 146.77 22.496\n",
+      "4 146.77 22.496\n",
+      "5 146.77 22.496\n",
+      "6 146.77 22.496\n",
+      "7 146.77 22.496\n",
+      "8 146.77 22.496\n",
+      "9 146.77 22.496\n",
+      "10 146.77 22.496\n"
+     ]
+    }
+   ],
    "source": [
     "from main import MolecularDynamics\n",
     "\n",
-    "x = MolecularDynamics(number_atoms=100,\n",
+    "x = MolecularDynamics(number_atoms=10,\n",
     "                      Lx=20,\n",
-    "                      maximum_steps=100,\n",
-    "                      tau_temp = 100,\n",
+    "                      maximum_steps=10,\n",
+    "                      tau_temp = None,\n",
     "                      seed=69837,\n",
     "                      )\n",
     "x.run()"
