--- a/molecular-simulation/run.ipynb
+++ b/molecular-simulation/run.ipynb
@@ -2,35 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from main import MolecularDynamics\n",
+    "\n",
+    "x = MolecularDynamics(number_atoms=10,\n",
+    "                      Lx=20,\n",
+    "                      maximum_steps=1000,\n",
+    "                      thermo = 100,\n",
+    "                      dump = 100,\n",
+    "                      tau_temp = None,\n",
+    "                      tau_press = None,\n",
+    "                      seed=69837,\n",
+    "                      )\n",
+    "x.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step temp press\n",
-      "1 146.77 22.496\n",
-      "2 146.77 22.496\n",
-      "3 146.77 22.496\n",
-      "4 146.77 22.496\n",
-      "5 146.77 22.496\n",
-      "6 146.77 22.496\n",
-      "7 146.77 22.496\n",
-      "8 146.77 22.496\n",
-      "9 146.77 22.496\n",
-      "10 146.77 22.496\n"
+      "step N temp epot press vol\n",
+      "0 10 146.77 -1.66E-04 2.25E+01 8.00E+03\n",
+      "100 59 22.77 -2.74E-01 2.05E+01 8.00E+03\n",
+      "200 107 12.46 2.05E+00 1.48E+02 8.00E+03\n",
+      "300 151 8.81 -1.48E+00 2.99E+01 8.00E+03\n",
+      "400 189 7.03 -1.63E+00 -2.72E+02 8.00E+03\n",
+      "500 237 5.6 -3.30E+00 5.39E+01 8.00E+03\n",
+      "600 269 4.93 -2.84E+00 -4.98E+02 8.00E+03\n",
+      "700 310 4.27 -4.21E+00 1.98E+02 8.00E+03\n",
+      "800 362 3.66 -2.57E+00 2.97E+02 8.00E+03\n",
+      "900 396 3.34 -5.93E+00 2.28E+02 8.00E+03\n",
+      "1000 427 3.1 -7.98E+00 2.28E+02 8.00E+03\n"
      ]
     }
    ],
    "source": [
-    "from main import MolecularDynamics\n",
+    "from main import MonteCarlo\n",
     "\n",
-    "x = MolecularDynamics(number_atoms=10,\n",
+    "x = MonteCarlo(number_atoms=10,\n",
     "                      Lx=20,\n",
-    "                      maximum_steps=10,\n",
-    "                      tau_temp = None,\n",
+    "                      maximum_steps=1000,\n",
+    "                      displace_mc = 0.5,\n",
+    "                      mu = -0.5,\n",
     "                      seed=69837,\n",
+    "                      dump = 100,\n",
+    "                      thermo = 100,\n",
     "                      )\n",
     "x.run()"
    ]
@@ -41,72 +65,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'MolecularSimulation' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m MolecularSimulation(number_atoms\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m,\n\u001b[1;32m      2\u001b[0m                     Lx\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m,\n\u001b[1;32m      3\u001b[0m                     maximum_steps\u001b[39m=\u001b[39m\u001b[39m10000\u001b[39m,\n\u001b[1;32m      4\u001b[0m                     dimensions\u001b[39m=\u001b[39m \u001b[39m3\u001b[39m,\n\u001b[1;32m      5\u001b[0m                     monte_carlo\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[1;32m      6\u001b[0m                     molecular_dynamics\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m      7\u001b[0m                     desired_temperature\u001b[39m=\u001b[39m\u001b[39m300\u001b[39m,\n\u001b[1;32m      8\u001b[0m                     seed\u001b[39m=\u001b[39m\u001b[39m42982\u001b[39m,\n\u001b[1;32m      9\u001b[0m                     thermo\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m,\n\u001b[1;32m     10\u001b[0m                     dump\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m,\n\u001b[1;32m     11\u001b[0m                     )\u001b[39m.\u001b[39mrun()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'MolecularSimulation' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "MolecularSimulation(number_atoms=20,\n",
-    "                    Lx=20,\n",
-    "                    maximum_steps=10000,\n",
-    "                    dimensions= 3,\n",
-    "                    monte_carlo=False,\n",
-    "                    molecular_dynamics=True,\n",
-    "                    desired_temperature=300,\n",
-    "                    seed=42982,\n",
-    "                    thermo=100,\n",
-    "                    dump=100,\n",
-    "                    ).run()"
-   ]
   },
   {
    "cell_type": "code",
