--- a/benchmark/python_25part_1.7nm3_300K_NVT/run.ipynb
+++ b/benchmark/python_25part_1.7nm3_300K_NVT/run.ipynb
@@ -2,22 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"../../molecular-simulation/\")\n",
-    "from main import MolecularSimulation\n",
+    "from main import MolecularDynamics\n",
     "\n",
-    "MolecularSimulation(number_atoms=25,\n",
+    "MolecularDynamics(number_atoms=25,\n",
     "                    Lx=12,\n",
     "                    maximum_steps=2000000,\n",
     "                    dimensions= 3,\n",
-    "                    monte_carlo_move=False,\n",
-    "                    monte_carlo_insert=False,\n",
-    "                    molecular_dynamics=True,\n",
     "                    desired_temperature=300,\n",
+    "                    tau_temp=100,\n",
     "                    seed=41982,\n",
     "                    thermo=500,\n",
     "                    dump=500,\n",
